force-app/main/default/objects/LLC_BI__Commercial_Experience__e/LLC_BI__Commercial_Experience__e.object-meta.xml
<CustomObject>
    <description>Platform event for Commercial Experience functionality.</description>
    <label>Commercial Experience</label>
    <pluralLabel>Commercial Experience</pluralLabel>
</CustomObject>