force-app/main/default/objects/LLC_BI__Commercial_Experience__e/fields/LLC_BI__Category__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Category__c</fullName>
    <description>Defines the category of the event within the domain.</description>
    <label>Category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>