force-app/main/default/objects/LLC_BI__Commercial_Experience__e/fields/LLC_BI__Context_Key__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Context_Key__c</fullName>
    <description>Defines the individual context of the event.</description>
    <label>Context Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>