force-app/main/default/objects/LLC_BI__Commercial_Experience__e/fields/LLC_BI__Data__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Data__c</fullName>
    <description>Information that the event hands off to any event listeners.</description>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>