force-app/main/default/objects/LLC_BI__Commercial_Experience__e/fields/LLC_BI__Domain__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Domain__c</fullName>
    <description>Defines the broad domain the event was created within.</description>
    <label>Domain</label>
    <length>30</length>
    <type>Text</type>
</CustomField>